--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^26.0.14",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "formik": "^2.1.6",
+    "formik-material-ui": "^3.0.0",
     "json-server": "^0.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -18,14 +23,16 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "roboto-npm-webfont": "^1.0.1",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-json-server": "json-server --watch db.json --port=3001"
+    "start-json-server": "json-server --watch db.json --port=3001",
+    "test:nowatch": "react-scripts test --watchAll=false"
   },
   "eslintConfig": {
     "extends": "react-app"
